samples/_failures_safe/1761312703_9c2032_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51510fd9.c: In function ‘main’:
./samples/SAFE/__tmp_51510fd9.c:174:5: error: expected expression at end of input
  174 |     if (cols1 == -1)
      |     ^~
./samples/SAFE/__tmp_51510fd9.c:174:5: error: expected declaration or statement at end of input
